Fix gap on menu item

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -123,10 +123,6 @@
         margin-bottom: 2vw;
         overflow: hidden;
 
-        .gallery-titre {
-          display: block;
-        }
-
         @media screen and (max-width: $bp-medium) {
           font-size: 3rem;
         }
